--- a/TODO.txt
+++ b/TODO.txt
@@ -1,10 +1,10 @@
 Required
 ----------------------------------------------------------------
-Dockerized environment (backend)
-Docker Compose for local environment (backend)
+Dockerized environment (backend) (done)
+Docker Compose for local environment (backend) (done)
 Use of ORM is permitted but not required
 All resources should be soft-deleted (done)
-DB schema migrations system
+DB schema migrations system (done)
 Use third party service for random string https://www.random.org/clients (done)
 All client-server interaction should be through RESTful API (versionated) (done)
 Entity endpoints should be able to provide filters and pagination (done)
@@ -14,6 +14,5 @@ Extra
 ----------------------------------------------------------------
 Add a notification when logged in
 Add a notification when trying close window
-Check service table design to allow new types
 Add charts to dashboard
 Redesigne navbar
